fix(react): wrap zodui controller style is wrong

--- a/packages/react/src/composers/list/item.scss
+++ b/packages/react/src/composers/list/item.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
     > div.zodui-controller {
       width: 100%;
+      justify-content: center;
     }
   }
   &:hover {
